matches front end

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,3 +4,9 @@ h1 {
     text-align: center;
     padding: 10px;
 }
+
+.dropdown-content {
+    display: none;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
