--- a/templates/player.html
+++ b/templates/player.html
@@ -3,13 +3,15 @@
 {% block content %}
     <h2>add players</h1>
     <form method="post">
-        <label for="name">Name</label>
-        <input type="text" name="name" placeholder="player name"
-            value="{{ request.form['name'] }}"></input>
-
-        <label for="elo">Elo</label>
-        <input type="number" name="elo" value="{{ request.form['elo'] }}"></input>
-
+        <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="player name"
+                value="{{ request.form['name'] }}"></input>
+    
+            <label for="elo">Elo</label>
+            <input type="number" id="elo" name="elo" value="{{ request.form['elo'] }}"></input>
+        </div>
+        
         <button type="submit">Submit</button>
     </form>
 {% endblock %}
