--- a/templates/player.html
+++ b/templates/player.html
@@ -5,11 +5,10 @@
     <form method="post">
         <div>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="player name"
-                value="{{ request.form['name'] }}"></input>
+            <input type="text" id="name" name="name" placeholder="player name" required>
     
             <label for="elo">Elo</label>
-            <input type="number" id="elo" name="elo" value="{{ request.form['elo'] }}"></input>
+            <input type="number" id="elo" name="elo">
         </div>
         
         <button type="submit">Submit</button>
