--- a/templates/player.html
+++ b/templates/player.html
@@ -4,11 +4,11 @@
     <h2>add players</h1>
     <form method="post">
         <div>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="player name" required>
+            <label for="name">name: </label>
+            <input type="text" maxlength="50" id="name" name="name" placeholder="player name" required>
     
-            <label for="elo">Elo</label>
-            <input type="number" id="elo" name="elo">
+            <label for="elo">elo (optional):</label>
+            <input type="number" min="0" max={{ max_elo }} id="elo" name="elo">
         </div>
         
         <button type="submit">Submit</button>
