--- a/templates/match.html
+++ b/templates/match.html
@@ -12,7 +12,7 @@
             </select>
             
             <label for="p1 score">p1 score</label>
-            <input type="number" id="p1 score" name="score1" required>
+            <input type="number" min="0" max = {{ max_score }} id="p1 score" name="score1" required>
         </div>
 
         <div>
@@ -25,7 +25,7 @@
             </select>
     
             <label for="p2 score">p2 score</label>
-            <input type="number" id="p2 score" name="score2" required>
+            <input type="number" min="0" max={{ max_score }} id="p2 score" name="score2" required>
         </div>
 
         <button type="submit">Submit</button>
