--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -1,24 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>rankings</h2>
-    <ol>
-        {% for player in players %}
-            <li>{{ player['name'] }} {{ player['elo'] }}</li>
-        {% endfor %}
-    </ol>
+    <div class="block" id="rankings">
+        <h1>rankings</h1>
+        <ol class="center">
+            {% for player in players %}
+                <li>{{ player['name'] }} {{ player['elo'] }}</li>
+            {% endfor %}
+        </ol>
+    </div>
     
-    <h2>match history</h2>
-    <table>
-        <tr>
-            <th>score</th>
-            <th>date</th>
-        </tr>
-        {% for match in matches %}
-        <tr>
-            <td>{{ match['player1'] }} {{ match['score1'] }} - {{ match['score2'] }} {{ match['player2'] }}</td>
-            <td>{{ match['date'] }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="block">
+        <h1>match history</h1>
+        <table class="center">
+            <tr>
+                <th>score</th>
+                <th>date</th>
+            </tr>
+            {% for match in matches %}
+            <tr>
+                <td>{{ match['player1'] }} {{ match['score1'] }} - {{ match['score2'] }} {{ match['player2'] }}</td>
+                <td>{{ match['date'] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
