--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,7 @@
     
             <nav>
                 <a href="/">rankings</a>
-                <a href="/player">player</a>
-                <a href="/match">match</a>
+                <a href="/input">input</a>
             </nav>
             
             <div>
