--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,9 @@
             <h1>CCM Table Tennis Rankings</h1>
     
             <nav>
-                <a href="/">rankings</a>
+                <a href="/rankings">rankings</a>
                 <a href="/input">input</a>
+                <a href="/matches">matches</a>
             </nav>
             
             <div>
