--- a/templates/matches.html
+++ b/templates/matches.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="matches">
         <h2>match history</h2>
-        <table style="text-align: center;">
+        <table>
             <tr>
                 <th></th>
                 <th>player 1</th>
