--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
 /* Reset */
-    h1, h2, p {
+    html, body, h1, h2, p {
         padding: 0;
         margin: 0;
     }
 
 /* Base */
+
     header {
         background-color: pink;
         padding: 10px;
@@ -16,10 +17,9 @@
         color: inherit;
         margin: 0;
         padding: 10px 25px;
-    }
-
-    nav a:hover {
-        color: cornflowerblue;
+        &:hover {
+            color: cornflowerblue;
+        }
     }
 
     .error {
@@ -30,8 +30,9 @@
     }
 
     .container {
-        /* min-height: 100%; */
-        min-height: 400px;
+        /* padding-left: 25%; */
+        /* padding-right: 25%; */
+        padding-bottom: 40px;
     }
 
     footer {
@@ -41,8 +42,12 @@
         padding: 10px;
         color: black;
         text-align: center;
-        position: relative;
+        position: fixed;
     }
+
+    /* html::-webkit-scrollbar {
+        width: 20px;
+    } */
 
 /* Rankings */
 
@@ -79,6 +84,11 @@
         padding: 20px;
     }
 
+    /* TODO center forms on page */
+    /* form {
+        margin: auto;
+    } */
+
     .dropdown-content {
         display: none;
     }
@@ -86,6 +96,10 @@
     .dropdown:hover .dropdown-content {display: block;}
 
 /* Matches */
+
+    h2 {
+        text-align: center;
+    }
 
     .pos {
         color: green;
@@ -97,8 +111,14 @@
 
     table {
         text-align: center;
+        margin: auto;
+        width: 50%;
     }
 
-    /* .matches {
-        padding-bottom: 40px;
-    } */
+    #date {
+        width: 25%;
+    }
+
+    #note {
+        width: 25%;
+    }
