--- a/templates/matches.html
+++ b/templates/matches.html
@@ -5,16 +5,20 @@
         <h2>match history</h2>
         <table>
             <tr>
+                <th id="date">date</th>
                 <th></th>
                 <th>player 1</th>
                 <th></th>
+                <td></td>
                 <th></th>
                 <th>player 2</th>
                 <th></th>
-                <th>date</th>
+                <th id="notes">notes</th>
             </tr>
             {% for match in matches %}
             <tr>
+                <td>{{ match['date'] }}</td>
+
                 {% if match['elochange1'] > 0 %}
                     <td class="pos">+{{ match['elochange1']|round(1) }}</td>
                 {% else %}
@@ -22,7 +26,7 @@
                 {% endif %}
                 <td>{{ match['player1'] }}</td>
                 <td>{{ match['score1'] }}</td>
-
+                <td>-</td>
                 <td>{{ match['score2'] }}</td>
                 <td>{{ match['player2'] }}</td>
                 {% if match['elochange2'] > 0 %}
@@ -31,7 +35,7 @@
                     <td class="neg">{{ match['elochange2']|round(1) }}</td>
                 {% endif %}
 
-                <td>{{ match['date'] }}</td>
+                <td>noooootes</td>
             </tr>
             {% endfor %}
         </table>
