--- a/templates/player.html
+++ b/templates/player.html
@@ -2,8 +2,7 @@
 
 {% block content %}
     <div>
-        <h1>{{ player['name'] }}</h1>
-        <p>elo: {{ player['elo']|round(1) }}</p>
+        <h2>{{ player['name'] }} - {{ player['elo']|round(1) }}</h2>
         
         <table>
             <tr>
