decent front end

--- a/templates/rankings.html
+++ b/templates/rankings.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="rankings">
+    <div class="padder">
         <ul>
             {% for player in players %}
                 <li>
-                    <span class="elo"><span class="inner">{{ player['elo']|round(1) }}</span></span>
-                    <span class="player"><span class="inner"><a href="/player/{{ player['name'].replace(' ', '_') }}">{{ player['name'] }}</a></span></span>
+                    <span class="elo"><span class="inner">{{ player.elo|round(1) }}</span></span>
+                    <span class="player"><span class="inner"><a href="/player/{{ player.name.replace(' ', '_') }}">{{ player.name }}</a></span></span>
                 </li>
             {% endfor %}
         </ul>
