--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 /* Reset */
-    html, body, h1, h2, p {
+    html, body, h1, h2, p, ul {
         padding: 0;
         margin: 0;
     }
@@ -30,9 +30,8 @@
     }
 
     .container {
-        /* padding-left: 25%; */
-        /* padding-right: 25%; */
-        padding-bottom: 40px;
+        /* padding-top: 10px; */
+        padding-bottom: 50px;
     }
 
     footer {
@@ -45,17 +44,17 @@
         position: fixed;
     }
 
+    .padder {
+        padding: 10px;
+    }
+
     /* html::-webkit-scrollbar {
         width: 20px;
     } */
 
 /* Rankings */
 
-    .rankings {
-        padding: 10px;
-    }
-
-    .rankings ul {
+    ul {
         list-style-type: none;
     }
 
@@ -81,13 +80,15 @@
 /* Input */
 
     .form {
-        padding: 20px;
+        margin: auto;
+        width: fit-content;
+        text-align: center;
+        padding: 10px;
     }
 
-    /* TODO center forms on page */
-    /* form {
+    button {
         margin: auto;
-    } */
+    }
 
     .dropdown-content {
         display: none;
