--- a/templates/base.html
+++ b/templates/base.html
@@ -32,3 +32,42 @@
         </footer>
     </body>
 </html>
+
+{% macro match_table() %}
+    <table>
+        <tr>
+            <th id="date">date</th>
+            <th></th>
+            <th>player 1</th>
+            <th></th>
+            <td></td>
+            <th></th>
+            <th>player 2</th>
+            <th></th>
+            <th id="notes">notes</th>
+        </tr>
+        {% for match in matches %}
+        <tr>
+            <td>{{ match.date }}</td>
+
+            {% if match.elochange1 > 0 %}
+                <td class="pos">+{{ match.elochange1|round(1) }}</td>
+            {% else %}
+                <td class="neg">{{ match.elochange1|round(1) }}</td>
+            {% endif %}
+            <td>{{ match.player1 }}</td>
+            <td>{{ match.score1 }}</td>
+            <td>-</td>
+            <td>{{ match.score2 }}</td>
+            <td>{{ match.player2 }}</td>
+            {% if match.elochange2 > 0 %}
+                <td class="pos">+{{ match.elochange2|round(1) }}</td>
+            {% else %}
+                <td class="neg">{{ match.elochange2|round(1) }}</td>
+            {% endif %}
+
+            <td>{{match.notes}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+{% endmacro %}
