--- a/templates/input.html
+++ b/templates/input.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="form">
-        <h2>add players</h2>
+        <h2>add player</h2>
         <form action="/input/player" method="post">
             <label for="name">name: </label>
             <input type="text" maxlength="50" id="name" name="name" placeholder="player name" required>
